corrección en 'Editorial' del archivo detalleLibro.html y colores de tema y fondo en el manifest

--- a/detalleLibro.html
+++ b/detalleLibro.html
@@ -177,7 +177,7 @@
                                         <li class="list-group-item"> Autor: <mark> Escritor Anónimus </mark></li>
                                         <li class="list-group-item">ISBN: <mark>Fes50pnt5e68 </mark></li>
                                         <li class="list-group-item">Fecha de publicación: <mark>01/01/1999 </mark></li>
-                                        <li class="list-group-item">Editorial: <mark>mark>Blaise Pascal Editions</mark></li>
+                                        <li class="list-group-item">Editorial: <mark>Blaise Pascal Editions</mark></li>
                                         <li class="list-group-item">Ciudad: <mark>Guadalajara, Jalisco</mark></li>
                                         <li class="list-group-item">Categoría: <mark>720 Urbanismo y aruitectura del paisaje</mark></li>
                                     </ul>
