corrección de Colores en los metas para barra de navegador de la pwa y ajuste de espacio entre la imagen y la descripción del detalleLibro

--- a/detalleLibro.html
+++ b/detalleLibro.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Android  -->
-    <meta name="theme-color" content="red">
+    <meta name="theme-color" content="#664B5">
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- iOS -->
@@ -15,8 +15,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- Windows  -->
-    <meta name="msapplication-navbutton-color" content="red">
-    <meta name="msapplication-TileColor" content="red">
+    <meta name="msapplication-navbutton-color" content="#664B5">
+    <meta name="msapplication-TileColor" content="#664B5">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="msapplication-config" content="browserconfig.xml">
 
@@ -166,7 +166,7 @@
                     <div class="row justify-content-center">
                         <div class="card shadow-lg border-0 rounded-lg mt-5" style="width:80%">
                         <div class="row g-0 mt-3">
-                                <div class="col-md-6 ">
+                                <div class="col-md-5 ">
                                     <div class="card-header">
                                         Nombre: <strong>
                                             Brutalismo atemporal
@@ -182,8 +182,9 @@
                                         <li class="list-group-item">Categoría: <mark>720 Urbanismo y aruitectura del paisaje</mark></li>
                                     </ul>
                                 </div>
+                                <div class="col-md-1"></div>
                                 <div class="col-md-6 mb-4 mt-3">
-                                    <img src="imagenesProvisionales/Libro1.jpg" class="card-img-top" alt="">
+                                    <img src="imagenesProvisionales/Libro1.jpg" class="card-img-top img-thumbnail border border-5 rounded" alt="">
                                 </div>
                             </div>
                             <div class="card text-end mb-3">
