--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Android  -->
-    <meta name="theme-color" content="red">
+    <meta name="theme-color" content="#664B5">
     <meta name="mobile-web-app-capable" content="yes">
 
     <!-- iOS -->
@@ -15,8 +15,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
     <!-- Windows  -->
-    <meta name="msapplication-navbutton-color" content="red">
-    <meta name="msapplication-TileColor" content="red">
+    <meta name="msapplication-navbutton-color" content="#664B5">
+    <meta name="msapplication-TileColor" content="#664B5">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="msapplication-config" content="browserconfig.xml">
 
