--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     <h5 class="card-title">Libro de ejemplo</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     <div class="d-grid gap-2 col-6 mx-auto">
-                                        <a href="#" class="btn btn-warning">Detalles</a>
+                                        <a href="#" class="btn btn-warning"><strong>Detalles</strong></a>
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@
                                     <h5 class="card-title">Libro de ejemplo</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     <div class="d-grid gap-2 col-6 mx-auto">
-                                        <a href="#" class="btn btn-warning">Detalles</a>
+                                        <a href="#" class="btn btn-warning"><strong>Detalles</strong></a>
                                     </div>
                                 </div>
                             </div>
@@ -201,7 +201,7 @@
                                     <h5 class="card-title">Libro de ejemplo</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     <div class="d-grid gap-2 col-6 mx-auto">
-                                        <a href="#" class="btn btn-warning">Detalles</a>
+                                        <a href="#" class="btn btn-warning"><strong>Detalles</strong></a>
                                     </div>
                                 </div>
                             </div>
@@ -218,7 +218,7 @@
                                     <h5 class="card-title">Libro de ejemplo</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     <div class="d-grid gap-2 col-6 mx-auto">
-                                        <a href="#" class="btn btn-warning">Detalles</a>
+                                        <a href="#" class="btn btn-warning"><strong>Detalles</strong></a>
                                     </div>
                                 </div>
                             </div>
@@ -231,7 +231,7 @@
                                     <h5 class="card-title">Libro de ejemplo</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     <div class="d-grid gap-2 col-6 mx-auto">
-                                        <a href="#" class="btn btn-warning">Detalles</a>
+                                        <a href="#" class="btn btn-warning"><strong>Detalles</strong></a>
                                     </div>
                                 </div>
                             </div>
@@ -244,7 +244,7 @@
                                     <h5 class="card-title">Libro de ejemplo</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                     <div class="d-grid gap-2 col-6 mx-auto">
-                                        <a href="#" class="btn btn-warning">Detalles</a>
+                                        <a href="#" class="btn btn-warning"><strong>Detalles</strong></a>
                                     </div>
                                 </div>
                             </div>
