--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta name="nightmode" content="enable/disable">
 
     <!-- Fitscreen  -->
-    <meta name="viewport" content="uc-fitscreen=yes"/>
+    <!-- <meta name="viewport" content="uc-fitscreen=yes"/> -->
 
     <!-- Layout mode -->
     <meta name="layoutmode" content="fitscreen/standard">
@@ -68,7 +68,7 @@
 
     <link rel="stylesheet" type="text/css" href="font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/responsive.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/responsive.css"> -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
 
     <link rel="manifest" href="manifest.json">
